--- a/src/content/docs/convenios/convenio-1986-1987.mdx
+++ b/src/content/docs/convenios/convenio-1986-1987.mdx
@@ -288,7 +288,7 @@ Ambas partes, conscientes del volumen que en el medio y largo plazo adquiere el 
 1. Constituir una Comisión Mixta que estudie el problema y proponga la aplicación de una solución, sobre la base de que la misma habrá de ser participada entre empresa y trabajadores, antes del 31-12-86.
 2. Durante 1986 se mantiene el beneficio de la jubilación anticipada a los sesenta años; en consecuencia, los complementos a establecer, durante dicho año, serán calculados con los salarios vigentes durante 1985, independientemente de la fecha de jubilación. El Complemento de la Empresa que resulte se reducirá en un 10 por 100.
 Para tener derecho al beneficio anterior, será preciso acreditar pertenecer a la plantilla fija de la Empresa durante diez años de servicio ininterrumpidos, como mínimo.
-3. Como consecuencia de todo lo anterior, queda en suspenso, temporalmente, el Anexo 1.o del Convenio de 1985, hasta que la Comisión, nombrada al efecto, proponga una solución a dicho tema.
+3. Como consecuencia de todo lo anterior, queda en suspenso, temporalmente, el Anexo 1º del Convenio de 1985, hasta que la Comisión, nombrada al efecto, proponga una solución a dicho tema.
 
 #### Artículo 27. Indemnización por fallecimiento.
 En caso de fallecimiento de un trabajador, independientemente de la liquidación que legalmente corresponda a sus derechohabientes, la Empresa abonará a estos últimos una indemnización de 25.000 pesetas, por una sola vez. Se considerarán derechohabientes, a los efectos anteriores y con el orden de prelación que se relaciona a continuación las siguientes personas:
@@ -429,7 +429,7 @@ Será preceptivo que todo el personal que concurra a pruebas de aptitud se somet
 
 Las pruebas de aptitud se convocarán en la Empresa, con carácter general, en el mes de octubre de cada año y el tiempo para su realización será hasta el mes de abril del año siguiente.
 
-El Auxiliar de 2ª Obrero pasará automáticamente a Auxiliar de 1.a Obrero en el momento de ser fijo en la plantilla.
+El Auxiliar de 2ª Obrero pasará automáticamente a Auxiliar de 1ª Obrero en el momento de ser fijo en la plantilla.
 
 El Auxiliar de 1ª Obrero ascenderá a Ayudante Obrero después de siete años en la categoría de Auxiliar 1ª.
 
