--- a/src/content/docs/convenios/convenio-1988-1989.mdx
+++ b/src/content/docs/convenios/convenio-1988-1989.mdx
@@ -667,7 +667,7 @@ Las vacantes producidas por la aplicación de estos beneficios podrán amortizar
 Si la edad de jubilación fuera modificada por disposición legal, las presentes normas se modificarán automáticamente en cuanto a la edad se refiere, sustituyendo los sesenta y cinco años actuales por la edad que se implante.
 
 ##### Base 10. Vigencia.
-Las anteriores normas están en vigor desde el 1.o de enero de 1987, a todos los efectos.
+Las anteriores normas están en vigor desde el 1º de enero de 1987, a todos los efectos.
 
 ##### Base 11. Congelación del complemento.
 Dadas las ventajas que para el trabajador jubilado reportan las condiciones pactadas en este Convenio, si, una vez cumplida la edad reglamentaria (65 años) de jubilación, no se jubilase, se le congelará el complemento de pensión que le hubiese correspondido en el momento de la jubilación por edad reglamentaria, y, por cada año vencido que pasase de fecha, se le reducirá, dicho complemento, en un 50 por 100, con un plazo máximo de cinco años, transcurrido el cual, quedará definitivamente extinguido.
@@ -744,7 +744,7 @@ Cesará el devengo de la pensión complementaria de viudedad por las siguientes 
 21.4. Por fallecimiento del beneficiario.
 
 ##### Base 22.
-Las presentes normas de viudedad están en vigor a partir del 1.o de enero de 1987.
+Las presentes normas de viudedad están en vigor a partir del 1º de enero de 1987.
 
 ### GENERAL
 
