--- a/src/content/docs/convenios/convenio-1990-1991.mdx
+++ b/src/content/docs/convenios/convenio-1990-1991.mdx
@@ -339,7 +339,7 @@ Los trabajadores de cualquier categoría, incluidos en la Seguridad Social, tend
 
 B) Accidente de trabajo.
 
-Los trabajadores de cualquier categoría, incluidos en la Seguridad Social, tendrán opción a un complemento de retribución hasta el total del Salario Base, Antigüedad y Plus Convenio correspondientes a su categoría laboral en jornada normal de trabajo, mientras se encuentren en dicha situación, así como a los complementos de Productividad y de Trabajo Efectivo y Continuado, para el personal que tiene derecho a ellos. Para el personal de reparto, además del Salario Base, Plus de Convenio y Antigüedad se tendrá en cuenta la media de las primas cobradas en los doce meses inmediatamente anteriores a la fecha de la baja. Caso de que se encuentren en la situación descrita en el artículo 7, apartado 3.o, último párrafo, se tendrán en cuenta los complementos de trabajo efectivo y continuado y el complemento de productividad.
+Los trabajadores de cualquier categoría, incluidos en la Seguridad Social, tendrán opción a un complemento de retribución hasta el total del Salario Base, Antigüedad y Plus Convenio correspondientes a su categoría laboral en jornada normal de trabajo, mientras se encuentren en dicha situación, así como a los complementos de Productividad y de Trabajo Efectivo y Continuado, para el personal que tiene derecho a ellos. Para el personal de reparto, además del Salario Base, Plus de Convenio y Antigüedad se tendrá en cuenta la media de las primas cobradas en los doce meses inmediatamente anteriores a la fecha de la baja. Caso de que se encuentren en la situación descrita en el artículo 7, apartado 3º, último párrafo, se tendrán en cuenta los complementos de trabajo efectivo y continuado y el complemento de productividad.
 
 En el caso de que la legislación vigente fuera derogada o modificada, la Empresa buscaría la mejor solución, a fin de obtener el necesario acuerdo, en esta materia, con el Comité de Empresa.
 
@@ -618,7 +618,7 @@ La Empresa garantiza la percepción de los haberes el día 26 de cada mes; caso 
 anterior.
 
 #### Tercera.
-El salario del personal de limpieza se equipara al de Auxiliar de 1.a Obrero, sin que ello cree derecho alguno a ascenso por antigüedad.
+El salario del personal de limpieza se equipara al de Auxiliar de 1ª Obrero, sin que ello cree derecho alguno a ascenso por antigüedad.
 
 #### Cuarta.
 El personal de reparto, que esté en control disponible para el servicio, percibirá las primas de venta que devengue el repartidor que le haya sustituido, sí, por absentismo, realiza, al menos, la mitad de la jornada.
@@ -712,7 +712,7 @@ Tabla de jubilación ordinaria con el % que ha de alcanzar el complemento sobre 
 A los trabajadores mayores de 60 años que opten por la jubilación anticipada, se les aplicará la antigüedad que tendrían si tuviesen 65 años cumplidos en dicho momento.
 
 ##### Base 5. Fraccionamiento y pago.
-El total del complemento anual que resulte de la aplicación de la escala (Base 4.a) y tablas (Anexo n.o 2), se fraccionará en 14 pagas iguales, 12 se abonarán por meses naturales vencidos y las 2 restantes en los meses de julio y diciembre. El pago se efectuará en la forma que sea habitual en la Empresa.
+El total del complemento anual que resulte de la aplicación de la escala (Base 4ª) y tablas (Anexo n.o 2), se fraccionará en 14 pagas iguales, 12 se abonarán por meses naturales vencidos y las 2 restantes en los meses de julio y diciembre. El pago se efectuará en la forma que sea habitual en la Empresa.
 
 ##### Base 6. Cesión del derecho.
 Para el cobro de este complemento es preciso en el mes de enero de cada año, la presentación del beneficiario en el Departamento de Recursos Humanos o la remisión del certificado que corresponda. Cesará el devengo de los complementos de pensión de jubilación al fallecer el beneficiario.
