--- a/src/content/docs/convenios/convenio-1994-1995.mdx
+++ b/src/content/docs/convenios/convenio-1994-1995.mdx
@@ -32,7 +32,7 @@ AÑO 1994-1995
 ### DISPOSICIONES GENERALES
 
 #### Artículo 1º. Ámbito territorial, funcional y personal.
-Las estipulaciones del presente Convenio afectarán a todo el personal de la Empresa &quot;MAHOU, S.A.&quot;, dedicada a la fabricación y comercio de cerveza, que preste sus servicios en los Centros de trabajo que la misma tiene actualmente establecidos, o que establezca en el futuro en cualquier parte del territorio nacional.
+Las estipulaciones del presente Convenio afectarán a todo el personal de la Empresa «MAHOU, S. A.», dedicada a la fabricación y comercio de cerveza, que preste sus servicios en los Centros de trabajo que la misma tiene actualmente establecidos, o que establezca en el futuro en cualquier parte del territorio nacional.
 
 A los efectos de aplicación del Convenio, las condiciones pactadas en el mismo forman un todo orgánico e indivisible y serán consideradas globalmente.
 
@@ -178,7 +178,7 @@ El personal de reparto que esté pendiente de traslado por incapacidad cobrará 
 3º. Los Inspectores comerciales (de venta y reparto), en tanto estén adscritos a estos servicios quedarán excluidos del régimen de jornada normal, en virtud de las compensaciones económicas pactadas con la Empresa y denominadas primas de venta, con las que, entre otros conceptos, se compensan las características inherentes a los servicios de esta categoría.
 
 #### Artículo 9º. Plus de rotación de tarde y noche.
-Se establece un plus de rotación en cuantía igual, por categoría, a la que figura en el anexo 2 que se percibirá por día efectivamente trabajado en turno de tarde o noche, en jornada completa (7 u 8 horas según corresponda) en régimen de rotación de turnos. En la organización de estos turnos se tendrá en cuenta la rotación de los mismos, a fin de que ésta sea lo más homogénea posible.
+Se establece un plus de rotación en cuantía igual, por categoría, a la que figura en el anexo 2 que se percibirá por día efectivamente trabajado en turno de tarde o noche, en jornada completa (7 u 8 horas según corresponda) en régimen de rotación de turnos. En la organización de estos turnos se tendrá en cuenta la rotación de los mismos, a fin de que esta sea lo más homogénea posible.
 
 A efectos de este artículo, se considera turno de tarde el que se inicia a partir de las doce horas en adelante y turno de noche, el que se inicia a partir de las veintitrés horas.
 
@@ -187,7 +187,7 @@ Si por absentismo no se realizase la mitad de la jornada completa pactada, este 
 #### Artículo 10. Remuneración obligatoria de domingos y fiestas.
 Todos los productores tendrán derecho a percibir el salario íntegro del domingo, festivo o día de descanso semanal obligatorio.
 
-Cuando se solicite que el personal trabaje un domingo o día festivo tendrá un día de descanso en la semana siguiente o más tarde si mediara pacto, en compensación, y percibirá la retribución doble (Salario Base, Plus Convenio y Antigüedad).
+Cuando se solicite que el personal trabaje un domingo o día festivo tendrá un día de descanso en la semana siguiente o más tarde si mediará pacto, en compensación, y percibirá la retribución doble (Salario Base, Plus Convenio y Antigüedad).
 
 Será de libre aceptación por parte del interesado trabajar en domingo o día festivo, a excepción de los productores de mantenimiento, conservación o vigilantes y los que pertenecen a las secciones de régimen especial de turnos.
 
@@ -198,7 +198,7 @@ Todos los trabajadores, sin distinción de grupo o categoría profesional, tendr
 
 La retribución salarial de las vacaciones estará constituida por el Salario Base más los aumentos por antigüedad, tanto ordinarios como especiales, el Plus de Convenio y la cantidad a tanto alzado de 42.000,ptas. brutas para cada trabajador de la Empresa. Dicha cantidad quedará absorbida y compensada por cualquier otro emolumento retributivo en que pudieran, en su caso, quedar incrementadas las retribuciones correspondientes a vacaciones.
 
-Teniendo en cuenta que la actividad de &quot;MAHOU, S. A.&quot;, resulta muy afectada por el fuerte incremento de la demanda en los meses de verano, lo que da a nuestra industria características muy peculiares, que permiten encuadrarla, sin ningún género de dudas, entre las calificadas como industria de “campaña“, las vacaciones de su personal se disfrutarán durante 8 meses del año.
+Teniendo en cuenta que la actividad de «MAHOU, S. A.», resulta muy afectada por el fuerte incremento de la demanda en los meses de verano, lo que da a nuestra industria características muy peculiares, que permiten encuadrarla, sin ningún género de dudas, entre las calificadas como industria de "campaña", las vacaciones de su personal se disfrutarán durante 8 meses del año.
 
 No obstante cuanto antecede, la Empresa tratará de conceder tantas vacaciones en los meses de Junio, Julio, Agosto y Septiembre como las necesidades comerciales, de organización, producción y campaña permitan, estableciéndose para los meses citados, en cualquier caso, el disfrute de vacaciones para el 50 por 100 del personal.
 
@@ -210,9 +210,9 @@ Si al trabajador con derecho a vacaciones de mes natural se le autorizara a come
 
 Las vacaciones a partir de 1994 serán de un mes natural completo, es decir, que se iniciarán, en todo caso, el día uno de cada mes y finalizarán el último día de dicho mes, y todo ello con independencia de que tanto el día primero como último del mes sean laborables o festivos.
 
-Igualmente se podrá cambiar 15 días de vacaciones con otro trabajador de la misma sección, categoría y puesto de trabajo, preavisando ambos trabajadores, con un mes de antelación, las fechas concretas de disfrute.
+Igualmente, se podrá cambiar 15 días de vacaciones con otro trabajador de la misma sección, categoría y puesto de trabajo, preavisando ambos trabajadores, con un mes de antelación, las fechas concretas de disfrute.
 
-La Empresa estudiará las situaciones de bajas médicas con hospitalización o de más de 15 días durante el período de vacaciones. De decidir aquélla que el trabajador disfrute dichos días, éstos se llevarán a cabo dentro de los meses de Enero, Febrero y Noviembre y en las fechas por aquélla indicada.
+La Empresa estudiará las situaciones de bajas médicas con hospitalización o de más de 15 días durante el período de vacaciones. De decidir aquella que el trabajador disfrute dichos días, estos se llevarán a cabo dentro de los meses de Enero, Febrero y Noviembre y en las fechas por aquella indicada.
 
 El cuadrante actual de vacaciones finaliza en 1994. Ambas partes han pactado un nuevo cuadrante, como mínimo, para ocho años (1995 2002), adecuándolo a las categorías existentes en la actualidad en función de las necesidades.
 
@@ -257,7 +257,7 @@ Caso de ser denegada su petición por la Dirección de la Empresa, podrá acudir
 #### Artículo 15º. Rendimientos mínimos.
 Teniendo en cuenta las características especiales de la Industria Cervecera, la determinación de los rendimientos mínimos presenta serios obstáculos difíciles de salvar, máxime cuando estos rendimientos están condicionados por procesos bioquímicos no regulables a voluntad. Por estas circunstancias, no es posible incluir en el presente Convenio una tabla de rendimientos.
 
-Mientras no se fijen las mencionadas tablas, los trabajadores están obligados a unos rendimientos mínimos, atemperados a los profesionales de la Empresas. Si se produjese contienda respecto a dichos usos, se estará a lo que el prudente arbitrio del Tribunal competente haya deducido de las pruebas aportadas y falle en consecuencia.
+Mientras no se fijen las mencionadas tablas, los trabajadores están obligados a unos rendimientos mínimos, atemperados a los profesionales de las Empresas. Si se produjese contienda respecto a dichos usos, se estará a lo que el prudente arbitrio del Tribunal competente haya deducido de las pruebas aportadas y falle en consecuencia.
 
 #### Artículo 16º.
 Todas las percepciones señaladas en el presente Convenio se referirán a la jornada completa, y en tanto no se establezcan las tablas de rendimiento mínimo, para tener derecho a la totalidad de las percepciones, es preciso haber cubierto íntegramente la jornada completa con el rendimiento habitual propio de esta Empresa. Los trabajadores que prestan servicios durante un horario inferior al de la jornada completa percibirán sus salarios y complementos salariales en proporción al tiempo trabajado.
@@ -391,7 +391,7 @@ Se mantiene el sistema actualmente pactado y que se recoge en el Anexo n.o 1 de 
 Tanto la aportación como la prestación a jubilados para el año 1995 se fijará cuando se negocien en dicho año los salarios y complementos salariales.
 
 #### Artículo 27º. Indemnización por fallecimiento.
-En caso de fallecimiento de un trabajador, independientemente de la liquidación que legalmente corresponda a sus derechohabientes, la Empresa abonará a éstos últimos una indemnización de 25.000,Pesetas, por una sola vez.
+En caso de fallecimiento de un trabajador, independientemente de la liquidación que legalmente corresponda a sus derechohabientes, la Empresa abonará a estos últimos una indemnización de 25.000,Pesetas, por una sola vez.
 
 Se considerarán derechohabientes, a los efectos anteriores y con el orden de prelación que se relaciona a continuación las siguientes personas:
 
@@ -480,7 +480,7 @@ La Empresa seguirá manteniendo, como hasta la fecha el concierto con un economa
 La Empresa efectuará las gestiones oportunas a fin de producirse la renovación de los carnets de conducir, próximos a caducar, de aquel personal que lo utilice como elemento de trabajo, siendo el costo de cada renovación por cuenta de la Empresa.
 
 #### Artículo 37º. Quebranto de moneda.
-El personal de Caja, que hasta la fecha viene disfrutándolo, percibirá anualmente en concepto de quebranto de moneda la cantidad de 28.560.Ptas.
+El personal de Caja, que hasta la fecha viene disfrutándolo, percibirá anualmente en concepto de quebranto de moneda la cantidad de 28.560 Ptas.
 
 #### Artículo 38º.
 De conformidad con lo dispuesto en el apartado primero del artículo 45 de la vigente Ordenanza Laboral, se fija la cuantía de las dietas, que deberá pagarse a los trabajadores que se desplacen a prestar sus servicios a localidades distintas de aquella en que esté situada la fábrica donde trabajen, en 10.500,pesetas diarias.
@@ -489,7 +489,7 @@ En los casos en que el trabajador puede regresar el mismo día de su salida, sol
 
 Los trabajadores de los servicios de transporte y reparto que tengan que prestar servicio en localidades distintas de aquella en que radique la fábrica, estarán excluidos del régimen de dietas que se establece en el párrafo anterior, siempre que tengan pactadas con la Empresa las compensaciones económicas en la forma prevista en el apartado 3 del artículo 45 de la Ordenanza Laboral anteriormente citada.
 
-Los inspectores comerciales y el personal dedicado a la instalación y mantenimiento de equipos expendedores de cerveza que tengan que prestar servicios en localidades distintas de aquélla en que radique la fábrica o su centro de trabajo, quedarán excluidos, asimismo, del régimen de dietas que se regula en el apartado primero de este artículo, siempre que tengan pactada con la Empresa esta compensación económica por cualquier concepto o sistema.
+Los inspectores comerciales y el personal dedicado a la instalación y mantenimiento de equipos expendedores de cerveza que tengan que prestar servicios en localidades distintas de aquella en que radique la fábrica o su centro de trabajo, quedarán excluidos, asimismo, del régimen de dietas que se regula en el apartado primero de este artículo, siempre que tengan pactada con la Empresa esta compensación económica por cualquier concepto o sistema.
 
 Todo trabajador podrá optar entre el régimen de dietas o el de gastos pagados, debidamente justificados.
 
@@ -521,16 +521,16 @@ h) Dos días por traslado de domicilio del trabajador.
 
 a) En caso de fallecimiento del cónyuge del trabajador con hijos menores de edad, podrá disfrutar de una licencia sin sueldo ni otra percepción económica, con reserva del puesto de trabajo, por un período no superior a un mes a contar desde la fecha del fallecimiento.
 
-b) La mujer trabajadora que hubiere dado a luz y agotado el período ordinario de suspensión de contrato por parto regulado en el apartado A) del artículo 48 del Estatuto de los Trabajadores, podrá disfrutar de una licencia sin sueldo ni otra percepción económica, con reserva del puesto de trabajo por un período máximo de 3 meses, en aquellos supuestos de enfermedad grave acreditada del recién nacido. Cuando el padre y la madre trabajen en MAHOU, S.A., uno de ellos podrá ejercer éste derecho.
+b) La mujer trabajadora que hubiere dado a luz y agotado el período ordinario de suspensión de contrato por parto regulado en el apartado A) del artículo 48 del Estatuto de los Trabajadores, podrá disfrutar de una licencia sin sueldo ni otra percepción económica, con reserva del puesto de trabajo por un período máximo de 3 meses, en aquellos supuestos de enfermedad grave acreditada del recién nacido. Cuando el padre y la madre trabajen en MAHOU, S.A., uno de ellos podrá ejercer este derecho.
 
 Las licencias especificadas en el epígrafe de licencias con sueldo, apartado b), c), d), e) y g) se entiende, asímismo referidas a quienes acrediten debidamente la convivencia conyugal de hecho.
 
 En todo caso, se entiende que los días a que se hace referencia en este artículo son días naturales. Si la localidad en que suceden los hechos que den origen a las licencias anteriormente mencionadas estuviese ubicada fuera de la Provincia donde radique su residencia, los plazos se ampliarán dos días naturales más. En este caso, cuando se pueda determinar la fecha en que ocurre el hecho causante, los dos días se disfrutarán uno antes y otro después del hecho que los motiva.
 
 #### Artículo 40º. Excedencia.
-El trabajador con al menos una antigüedad en la Empresa de un año tiene derecho a que se le reconozca la posibilidad a situarse en excedencia voluntaria por un plazo no menor a un año y no mayor a cinco. Este derecho sólo podrá ser ejercitado otra vez por el mismo trabajador si han transcurrido cuatro años desde el final de la anterior excedencia
+El trabajador con al menos una antigüedad en la Empresa de un año tiene derecho a que se le reconozca la posibilidad a situarse en excedencia voluntaria por un plazo no menor a un año y no mayor a cinco. Este derecho solo podrá ser ejercitado otra vez por el mismo trabajador si han transcurrido cuatro años desde el final de la anterior excedencia
 
-El trabajador excedente conserva sólo un derecho preferente al reingreso en las vacantes de igual o similar categoría a la suya que hubiera o se produjeran en la Empresa
+El trabajador excedente conserva solo un derecho preferente al reingreso en las vacantes de igual o similar categoría a la suya que hubiera o se produjeran en la Empresa
 
 Asímismo, será de aplicación lo dispuesto en la Ley Orgánica de Libertad Sindical.
 
@@ -555,7 +555,7 @@ Todos los contratos de trabajo se efectuarán de conformidad con la Legislación
 #### Artículo 42º. Ascensos y pruebas de aptitud.
 La Empresa desarrollará la política de formación y promoción adecuada, en orden a la mejora del nivel cultural y profesional de sus empleados, según las necesidades administrativas, comerciales, organizativas y de fabricación que se den en cada momento, procurando completar la Formación Profesional de sus trabajadores mediante los correspondientes cursos teóricos y prácticos organizados por la misma y de acuerdo con sus necesidades.
 
-Cuando surjan necesidades, y se saquen plazas a concurso, éstas se convocarán en primer lugar en el centro de trabajo donde exista tal necesidad y, si no se cubre en éste, se convocará en el otro centro de trabajo. Caso de que no se cubran con personal fijo en ninguno de los centros, se procederá a una nueva convocatoria para personal ajeno a la Empresa en un plazo de tres meses.
+Cuando surjan necesidades, y se saquen plazas a concurso, estas se convocarán en primer lugar en el centro de trabajo donde exista tal necesidad y, si no se cubre en este, se convocará en el otro centro de trabajo. Caso de que no se cubran con personal fijo en ninguno de los centros, se procederá a una nueva convocatoria para personal ajeno a la Empresa en un plazo de tres meses.
 
 Como consecuencia de lo anterior, la Empresa convocará y celebrará, en los tres meses anteriores a las pruebas de aptitud, cursos de formación profesional teórico-prácticos. Durante los mismos se desarrollarán las enseñanzas que figuren en el plan del curso. La Enseñanza correrá a cargo del personal de la Empresa que designe la Gerencia por su capacitación, según la materia de que se trate.
 
@@ -572,7 +572,7 @@ Las pruebas de aptitud deberán convocarse con la antelación mínima necesaria,
 
 Todo aspirante tendrán derecho a revisar su examen con el Tribunal si no está de acuerdo con la calificación obtenida.
 
-Será preceptivo que todo el personal que concurra a pruebas de aptitud se someta a un reconocimiento médico, una vez superadas éstas, que tendrá en cuenta las características físicas y psíquicas del puesto de trabajo a desempeñar, siempre que la ocupación de dicho puesto implique cambio de actividad.
+Será preceptivo que todo el personal que concurra a pruebas de aptitud se someta a un reconocimiento médico, una vez superadas estas, que tendrá en cuenta las características físicas y psíquicas del puesto de trabajo a desempeñar, siempre que la ocupación de dicho puesto implique cambio de actividad.
 
 Las pruebas de aptitud se convocarán en la Empresa, con carácter general, en el mes de Noviembre de cada año y el tiempo para su realización será hasta el mes de Marzo del año siguiente.
 
@@ -581,7 +581,7 @@ El Auxiliar de 2ª. Obrero pasará automáticamente a Auxiliar de 1ª. Obrero en
 El Auxiliar de 1ª. Obrero ascenderá a Ayudante Obrero después de siete años en la categoría de Auxiliar 1ª.
 
 #### Artículo 43º. Tribunal Calificador.
-El Tribunal Calificador de pruebas de aptitud estará compuesto por: Dos Vocales designados por la Dirección, uno de los cuales será el Presidente, otro Vocal igualmente designado por la Dirección de una terna propuesta por la Representación legal de los Trabajadores y dos Vocales designados por la Representación legal de los Trabajadores, todos ellos como mínimo con la misma categoría que corresponda a la vacante que se quiere cubrir, asistiendo además el Jefe de Personal ó persona que lo sustituya, con carácter de asesor.
+El Tribunal Calificador de pruebas de aptitud estará compuesto por: Dos Vocales designados por la Dirección, uno de los cuales será el Presidente, otro Vocal igualmente designado por la Dirección de una terna propuesta por la Representación legal de los Trabajadores y dos Vocales designados por la Representación legal de los Trabajadores, todos ellos como mínimo con la misma categoría que corresponda a la vacante que se quiere cubrir, asistiendo además el Jefe de Personal o persona que lo sustituya, con carácter de asesor.
 
 
 ## CAPÍTULO VII
@@ -605,7 +605,7 @@ Para desarrollar todas sus funciones, el Comité de Seguridad e Higiene contará
 
 La Empresa se compromete a garantizar la presencia de un A.T.S. durante el desarrollo de toda la jornada laboral, para prestar la debida atención a quien lo precise.
 
-En los casos en que un trabajador tenga que cumplir sus tareas en lugares aislados y no disponga de medios para comunicarse con otros trabajadores, la Empresa dispondrá de un servicio de vigilancia periódica para auxilio y seguridad de éstos.
+En los casos en que un trabajador tenga que cumplir sus tareas en lugares aislados y no disponga de medios para comunicarse con otros trabajadores, la Empresa dispondrá de un servicio de vigilancia periódica para auxilio y seguridad de estos.
 
 Siempre que se produzca un accidente, una copia del parte del mismo, será facilitada al trabajador lesionado, según establece la legislación vigente.
 
@@ -668,7 +668,7 @@ El mencionado vale se dejará en Portería. Cuando el trabajador regrese retirar
 
 3) Asuntos Sindicales dentro del Centro de Trabajo:
 
-Para realizar cualquier clase de gestión sindical dentro del Centro de Trabajo, se comunicará al respectivo Mando para interrumpir el trabajo habitual, cumplimentándose el vale &quot;Hoja de control de absentismo y visitas&quot;. El Representante Sindical una vez finalizada su gestión, deberá ponerlo en conocimiento del Mando al objeto de cerrar el correspondiente vale. Caso de no hacerse se entenderá que su dedicación a temas sindicales ha durado hasta el final de la jornada de trabajo.
+Para realizar cualquier clase de gestión sindical dentro del Centro de Trabajo, se comunicará al respectivo Mando para interrumpir el trabajo habitual, cumplimentándose el vale "Hoja de control de absentismo y visitas". El Representante Sindical una vez finalizada su gestión, deberá ponerlo en conocimiento del Mando al objeto de cerrar el correspondiente vale. Caso de no hacerse se entenderá que su dedicación a temas sindicales ha durado hasta el final de la jornada de trabajo.
 
 4) En el cumplimiento de los apartados 1) 2) y 3), la Representación de los Trabajadores, en el uso de las horas sindicales a que son acreedores, se comprometen formalmente a avisar a sus correspondientes Mandos con una antelación mínima de 24 horas, salvo en los casos de ineludible y probada necesidad sindical.
 
@@ -702,13 +702,13 @@ La Empresa arbitrará los medios necesarios, en la medida de sus posibilidades, 
 
 ## CAPÍTULO IX
 ### Artículo 52º. Reclamaciones del personal.
-Cualquier reclamación o queja del personal, respecto de su situación, deberá ser planteada en la vía jerárquica correspondiente dentro de cada departamento y tan sólo cuando haya transcurrido un plazo de quince días sin que, agotada en sus distintos escalones dicha vía, haya obtenido contestación o la contestación recibida no sea favorable, podrá reclamar a la Dirección de Recursos Humanos, para que ésta tramite ante la Dirección General la misma, que deberá ser resuelta en un plazo máximo de quince días debiendo recaer forzosamente resolución, aunque sea negativa.
+Cualquier reclamación o queja del personal, respecto de su situación, deberá ser planteada en la vía jerárquica correspondiente dentro de cada departamento y tan solo cuando haya transcurrido un plazo de quince días sin que, agotada en sus distintos escalones dicha vía, haya obtenido contestación o la contestación recibida no sea favorable, podrá reclamar a la Dirección de Recursos Humanos, para que esta tramite ante la Dirección General la misma, que deberá ser resuelta en un plazo máximo de quince días debiendo recaer forzosamente resolución, aunque sea negativa.
 
 La resolución negativa abre el cauce a la jurisdicción competente.
 
 En los casos en que la reclamación sea común a diferentes personas, o por su gravedad e importancia esté justificado un tratamiento especial en la vía jerárquica, deberá ser presentada a través de la Representación de los Trabajadores.
 
-Igualmente esta reclamación, ante la Dirección General tramitada a través de la Dirección de Recursos Humanos, habrá de ser resuelta en el plazo de quince días, abriéndose la vía correspondiente en caso de que la misma no fuese resuelta.
+Igualmente, esta reclamación, ante la Dirección General tramitada a través de la Dirección de Recursos Humanos, habrá de ser resuelta en el plazo de quince días, abriéndose la vía correspondiente en caso de que la misma no fuese resuelta.
 
 
 ## CAPÍTULO X
@@ -717,7 +717,7 @@ Igualmente esta reclamación, ante la Dirección General tramitada a través de 
 La festividad de la Virgen de las Viñas, Patrona de la Industria Cervecera, que se celebra el día 10 de Septiembre, se considera día laborable, pagándose doble, sin excepción de ningún tipo.
 
 #### Artículo 54º. Actividades varias.
-El Comité Intercentros designará a dos personas a fin de que se integren en una Comisión cuyo objeto será la organización de actividades culturales, deportivas, etc..., para todo el personal de la Empresa A este fin se asigna un presupuesto de 4.000.000,de Ptas. para cada año.
+El Comité Intercentros designará a dos personas a fin de que se integren en una Comisión cuyo objeto será la organización de actividades culturales, deportivas, etc., para todo el personal de la Empresa A este fin se asigna un presupuesto de 4.000.000,de Ptas. para cada año.
 
 #### Artículo 55º. Repercusión en precio.
 Como los incrementos pactados dan lugar a un incremento en los costos del personal, su incidencia en los precios repercutirá en la forma y cuantía que autoricen las normas vigentes en la materia.
@@ -725,7 +725,7 @@ Como los incrementos pactados dan lugar a un incremento en los costos del person
 
 ## DISPOSICIONES TRANSITORIAS
 #### Primera.
-Jubilación de los trabajadores con 60 o más años de edad en 1994.Los trabajadores que al 1/1/94 tengan 60 o más años de edad cumplidos se podrán acoger a los beneficios de jubilación establecidos en la tabla de complementos del año en que cumplieron los 60 años, sin actualizar, con las deducciones vigentes al 31/12/93. El plazo para acogerse a dichos beneficios finaliza el 31/12/1994. Caso de no acogerse a dicho sistema, hasta la fecha indicada, les será de aplicación la norma establecida en la Base 11.
+Jubilación de los trabajadores con 60 o más años de edad en 1994. Los trabajadores que al 1/1/94 tengan 60 o más años de edad cumplidos se podrán acoger a los beneficios de jubilación establecidos en la tabla de complementos del año en que cumplieron los 60 años, sin actualizar, con las deducciones vigentes al 31/12/93. El plazo para acogerse a dichos beneficios finaliza el 31/12/1994. Caso de no acogerse a dicho sistema, hasta la fecha indicada, les será de aplicación la norma establecida en la Base 11.
 
 #### Segunda.
 Trabajadores que no se puedan acoger a los beneficios de jubilación anticipada por no haber estado de alta en la Seguridad Social antes del 1/1/67.— Deberán jubilarse cuando cumplan 65 años, acogiéndose a los beneficios establecidos en la tabla que se adjunta como anexo n.º 4.
@@ -740,7 +740,7 @@ La operatividad del párrafo anterior, únicamente para los años 1994 y 1995, d
 Como medida de política de empleo y en relación con la disposición transitoria 3º, se establece como claúsula de carácter normativo la jubilación forzosa a los 65 años de edad de los trabajadores que tengan cubierto el período mínimo legal para obtener la pensión correspondiente.
 
 #### Quinta.
-Las secciones calificadas como régimen especial de turnos seguirán disfrutando de los derechos y obligaciones asignados a dicho proceso con carácter transitorio y sólo durante la vigencia de este Convenio, siempre que trabajen como mínimo 15 turnos y durante todo el año.
+Las secciones calificadas como régimen especial de turnos seguirán disfrutando de los derechos y obligaciones asignados a dicho proceso con carácter transitorio y solo durante la vigencia de este Convenio, siempre que trabajen como mínimo 15 turnos y durante todo el año.
 
 #### Sexta.
 Con efectos 1.1.1996 la jornada laboral se reducirá en dos días.
@@ -768,7 +768,7 @@ El personal de reparto, que esté en control disponible para el servicio, percib
 El personal de Reparto que esté en situación de rotación mensual, percibirá los mismos complementos que el personal de fábrica, sin estar sujeto al régimen de primas.
 
 #### Sexta.
-Con independencia de la normativa y legislación vigente se procederá a una puntual información sobre puesta en marcha de nuevas tecnologías que puedan establecerse.
+Con independencia de la normativa y legislación vigente se procederá a una puntual información sobrepuesta en marcha de nuevas tecnologías que puedan establecerse.
 
 #### Séptima.
 Se crea una Comisión que durante la vigencia del presente Convenio estudie la creación de las categorías de Preventista e Inspector de Ventas de 3. De llegar a un acuerdo se incorporaría como normativa del Convenio.
@@ -779,7 +779,8 @@ El personal que la Empresa contrate en prácticas tendrá una retribución de 3.
 
 ## DISPOSICIONES FINALES
 
-#### Primera. Corrosión Mixta de Interpretación.Las funciones de la Comisión Mixta de Interpretación son:
+#### Primera. Corrosión Mixta de Interpretación.
+Las funciones de la Comisión Mixta de Interpretación son:
 
 1ª. Interpretación del Convenio.
 
@@ -840,7 +841,7 @@ En todos aquellos aspectos no determinados concretamente en el presente Convenio
 **Bases que regulan la concesión de los beneficios de mejora de las pensiones de jubilación y viudedad**
 #### JUBILACIÓN
 
-El sistema, que se ha elegido, es un sistema mixto, ni de reparto ni de capitalización, es decir, no se ajusta a las recomendaciones del proyecto de reglamento que desarrollará la Ley de Fondo de Pensiones, y presenta, por otra parte, dificultades al no constituir reserva alguna financiera para las jubilaciones de la plantilla activa (la que está actualmente trabajando), ya que sólo se dotará al fondo para el personal que se jubile a partir del 31.12.86.
+El sistema, que se ha elegido, es un sistema mixto, ni de reparto ni de capitalización, es decir, no se ajusta a las recomendaciones del proyecto de reglamento que desarrollará la Ley de Fondo de Pensiones, y presenta, por otra parte, dificultades al no constituir reserva alguna financiera para las jubilaciones de la plantilla activa (la que está actualmente trabajando), ya que solo se dotará al fondo para el personal que se jubile a partir del 31.12.86.
 
 ##### Base 1ª. Declaración general.
 Queda reconocido expresamente que la jubilación ordinaria, a tenor de la legislación vigente, será a los 65 años de edad. No obstante, se pacta con carácter voluntario la jubilación anticipada a partir de los 60 años, siempre y cuando esta posibilidad sea viable y la normativa general al respecto la contemple. Dicha viabilidad será apreciada/calificada anualmente por la Comisión Gestora.
@@ -862,7 +863,7 @@ Lo indicado en los apartados 2.1 y 2.2, será de aplicación cuando el trabajado
 Los beneficios que se conceden, son exclusivamente de naturaleza económica y se contemplan en las tablas de complementos de jubilación que figuran en el Anexo número 2. A dichas tablas se aplicará el porcentaje de la escala que a continuación se señala, teniendo en cuenta los años de servicio ininterrumpido prestados a la Empresa, computándose la fracción de año como año completo.
 
 ##### Base 4ª.
-Tabla de jubilación ordinaria con el % que ha de alcanza el complemento sobre las tablas que figuran en el Anexo número 2.
+Tabla de jubilación ordinaria con el % que ha de alcanzar el complemento sobre las tablas que figuran en el Anexo número 2.
 
 | Años de servicio               | %    |
 |--------------------------------|------|
@@ -883,8 +884,8 @@ Para el cobro de este complemento es preciso en el mes de Enero de cada año, la
 ##### Base 7ª. Supuestos de invalidez.
 El personal que hubiera causado baja en la Empresa antes de cumplir los sesenta y cinco años, por invalidez, tendrá derecho a percibir el complemento de pensión que le corresponda una vez alcanzada la edad reglamentaria, aplicándosele las tablas bases de complementos de jubilación vigentes el año que causó baja por invalidez. Este complemento más las pensiones, que por cualquier concepto, disfrute de la Seguridad Social o del ramo de accidentes, nunca será superior a las percepciones que reciban los jubilados del mismo año, por todos los conceptos: Seguridad Social y complementos de jubilación de la Empresa.
 
-##### Base 8ª.
-Vacantes.Las vacantes producidas por la aplicación de estos beneficios podrán amortizarse por la Empresa, si alguna de ellas no resultara necesaria de acuerdo con su organización actual.
+##### Base 8ª. Vacantes.
+Las vacantes producidas por la aplicación de estos beneficios podrán amortizarse por la Empresa, si alguna de ellas no resultara necesaria de acuerdo con su organización actual.
 
 ##### Base 9ª. Modificación de la edad de jubilación.
 Si la edad de jubilación fuera modificada por disposición legal, las presentes normas se modificarán automáticamente en cuanto a la edad se refiere, sustituyendo los sesenta y cinco años actuales por la edad que se implante.
@@ -950,7 +951,7 @@ Se entenderá por incapacidad para el trabajo, la de carácter permanente y abso
 ##### Base 20. Beneficios que se conceden.
 Son de naturaleza exclusivamente económica según la situación del causante en el momento del fallecimiento.
 
-20.1. Si el causante estaba percibiendo la pensión complementaria de jubilación, el beneficiario percibirá el 60 por 100 de ésta en concepto de pensión de viudedad.
+20.1. Si el causante estaba percibiendo la pensión complementaria de jubilación, el beneficiario percibirá el 60 por 100 de esta en concepto de pensión de viudedad.
 
 20.2. Si el causante hubiera sido baja en la Empresa por incapacidad permanente total o absoluta, el beneficiario percibirá:
 
